grammar resposne letter readme

--- a/resources/research_skills/writing/response_to_reviewers/README.org
+++ b/resources/research_skills/writing/response_to_reviewers/README.org
@@ -13,7 +13,7 @@ Revising a manuscript means addressing all of the reviewers' issues in the
 manuscript. Additionally, a response letter to the reviewers needs to be
 written. The aim of this document is to convince the reviewers that all of
 their considerations have been met. Note that this is a formal document.
-Again,  the editor forwards the updated manuscript and response letters to
+Again the editor forwards the updated manuscript and response letter to
 the reviewers and bases his decision on their responses.
 
 * Example response letters
