--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -6,8 +6,10 @@
 - installing a specific python version from source [[https://docs.rstudio.com/resources/install-python-source/][link]]
 - environment variables needed to be set in bashrc:
 
+/usr/local/?
 PATH=/opt/python/3.7.4/bin/:$PATH
 
+/usr/local?
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/python/3.7.4/lib64/
 
 export PYTHONPATH=/usr/local/lib64/python3.7/lib-dynload
