--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -1,22 +1,61 @@
 
 
-* Scientific computing
+#+TITLE: Scientific computing
 
-* Installing python from source
-- installing a specific python version from source [[https://docs.rstudio.com/resources/install-python-source/][link]]
-- environment variables needed to be set in bashrc:
+** Installing python from source
 
-/usr/local/?
-PATH=/opt/python/3.7.4/bin/:$PATH
+Install dependencies (opensuse) (for other platforms, see: [[https://docs.rstudio.com/resources/install-python-source/][link]])
 
-/usr/local?
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/python/3.7.4/lib64/
+#+begin_src bash
+sudo zypper install \
+    automake \
+    fdupes \
+    gcc \
+    gcc-c++ \
+    gcc-fortran \
+    gdbm-devel \
+    gettext-tools \
+    gmp-devel \
+    intltool \
+    libbz2-devel \
+    libexpat-devel \
+    libffi-devel \
+    libnsl-devel \
+    lzma-devel \
+    make \
+    ncurses-devel \
+    netcfg \
+    openssl-devel \
+    pkgconfig \
+    readline-devel \
+    sqlite-devel \
+    xz \
+    zlib-devel
+#+end_src
 
-export PYTHONPATH=/usr/local/lib64/python3.7/lib-dynload
 
+Download python source
+#+begin_src bash
+wget https://www.python.org/ftp/python/3.10.4/Python-3.10.4.tgz
+#+end_src
 
-install virtual env
-sudo /usr/local/bin/pip3 install virtualenv
+Unpack
+#+begin_src bash
+tar zxvf Python-3.10.4.tgz
+#+end_src
+
+Compile (using 4 cores) and install
+#+begin_src bash
+cd Python-3.10.4/
+./configure --enable-optimizations
+make -j 4
+sudo make install
+#+end_src
+
+Link libraries (bugfix)
+#+begin_src bash
+sudo ln -s /usr/local/lib64/python3.10/lib-dynload/ /usr/local/lib/python3.10/lib-dynload
+#+end_src
 
 setup virtual env: [[https://docs.python.org/3/library/venv.html][docs]] 
 
