--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -25,4 +25,5 @@
 | Igor Jurisica       |                |          |                |               |
 | Jörg Menche         |                |          |                |               |
 | Jörg Stelling       |                |          |                |               |
+| Sophia Tsoka        |                |          |                |               |
 |---------------------+----------------+----------+----------------+---------------|
