--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -59,6 +59,10 @@ sudo ln -s /usr/local/lib64/python3.10/lib-dynload/ /usr/local/lib/python3.10/li
 
 setup virtual env: [[https://docs.python.org/3/library/venv.html][docs]] 
 
+#+begin_src bash
+python3.11 -m venv /Users/windels/venvs/venvGCM --system-site-packages --upgrade-deps
+#+end_src
+
 ** HPC
 
 cluster documentation: https://www.bsc.es/supportkc/
