--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -59,6 +59,8 @@ sudo ln -s /usr/local/lib64/python3.10/lib-dynload/ /usr/local/lib/python3.10/li
 
 setup virtual env: [[https://docs.python.org/3/library/venv.html][docs]] 
 
+Best is to enable system-site-packages for dependencies that can not be installed via pip (i.e., that need a system package manager like apt-get, or conda). For example, the graph-tool package. 
+
 #+begin_src bash
 python3.11 -m venv /Users/windels/venvs/venvGCM --system-site-packages --upgrade-deps
 #+end_src
