--- a/resources/machine_learning/graphlets/README.org
+++ b/resources/machine_learning/graphlets/README.org
@@ -7,13 +7,15 @@
 In the table below, we present some key reading for graphlets from an
 algorithmic perspective (i.e., not considering key applications).
 
-|------------------------------------------------------------------+------------------------------------------------------------------+---------------+---------------+------+-------------------------------|
-| Title                                                            | Relevance                                                        | 1st author    | Group         | Year | DOI                           |
-|------------------------------------------------------------------+------------------------------------------------------------------+---------------+---------------+------+-------------------------------|
-| Network motifs: simple building blocks of complex networks       | 1. Introduces motifs                                             | Ron Milo      | Uri Alon      | 2002 | [[https://doi.org/10.1126/science.298.5594.824][10.1126/science.298.5594.824]]  |
-| Modeling interactome: scale-free or geometric?                   | 1. Introduces graphlets                                          | Natasa Przulj | Igor Jurisica | 2004 | [[https://doi.org/10.1093/bioinformatics/bth436][10.1093/bioinformatics/bth436]] |
-| Biological network comparison using graphlet degree distribution | 1. Introduces orbits, 2. Introduces graphlet degree distribution | Natasa Przulj | Natasa Przulj | 2007 | [[https://doi.org/10.1093/bioinformatics/btl301][10.1093/bioinformatics/btl301]] |
-|------------------------------------------------------------------+------------------------------------------------------------------+---------------+---------------+------+-------------------------------|
+|------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------+----------------------+---------------+------+-------------------------------|
+| Title                                                                        | Relevance                                                                                  | 1st author           | Group         | Year | DOI                           |
+|------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------+----------------------+---------------+------+-------------------------------|
+| Network motifs: simple building blocks of complex networks                   | 1. Introduces motifs                                                                       | Ron Milo             | Uri Alon      | 2002 | [[https://doi.org/10.1126/science.298.5594.824][10.1126/science.298.5594.824]]  |
+| Modeling interactome: scale-free or geometric?                               | 1. Introduces graphlets                                                                    | Natasa Przulj        | Igor Jurisica | 2004 | [[https://doi.org/10.1093/bioinformatics/bth436][10.1093/bioinformatics/bth436]] |
+| Biological network comparison using graphlet degree distribution             | 1. Introduces orbits, 2. Introduces graphlet degree distribution                           | Natasa Przulj        | Natasa Przulj | 2007 | [[https://doi.org/10.1093/bioinformatics/btl301][10.1093/bioinformatics/btl301]] |
+| Revealing the hidden language of complex networks                            | 1. Introduces Graphlet Correlation Matrix, 2. Introduces the Graphlet Correlation Distance | Ömer Nebil Yaveroğlu | Natasa Przulj | 2014 | [[https://doi.org/10.1038/srep04547][10.1038/srep04547]]             |
+| Graphlet Laplacians for topology-function and topology-disease relationships | 1. Introduces graphlet adjacency                                                           | Sam F. L. Windels    | Natasa Przulj | 2019 | [[https://doi.org/10.1093/bioinformatics/btz455][10.1093/bioinformatics/btz455]] |
+|------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------+----------------------+---------------+------+-------------------------------|
 
 
 *** References on graphlet counting
