--- a/README.org
+++ b/README.org
@@ -22,3 +22,7 @@ Being able to synthesise papers/concepts/ideas/... to their esssence. This enabl
 - recognising related problems, so you can take inspiration from what other people have done
 - recognise limittions/weaknesses of your own methods, opening up new research problems
 - comunicate your ideas. A paper and a research proposal need to be sold!
+
+Modularity
+
+Zooming
