--- a/README.org
+++ b/README.org
@@ -23,6 +23,6 @@ Being able to synthesise papers/concepts/ideas/... to their esssence. This enabl
 - recognise limittions/weaknesses of your own methods, opening up new research problems
 - comunicate your ideas. A paper and a research proposal need to be sold!
 
-Modularity
+Modularity, analytical thinking
 
 Zooming
