--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -12,6 +12,30 @@ Goals: reproducible, error-free,
 
 Probably a package manager is better to create easier reproducible envirenmonts. Or docker?
 
+** Conda
+A systemwide packagemanager: it can install different versions of python, python packages and other dependencies (e.g., libraries). 
+This unlike pip, which can only install python packages. It is a cross-platform package manager, supporting linux macOS and Windows, so it is great for code portability. 
+It is also an environment manager, meaning you can have different set-ups, i.e., versions of python and installed python libraries, for different projects. 
+
+*** Install
+I prefer the miniconda distribution, which lets you choose all the packages you want installed, over anaconda, which just installs a ton of packages by default.  
+Latest install instructions [[https://docs.conda.io/projects/miniconda/en/latest/][here]].
+
+#+begin_src bash
+mkdir -p ~/miniconda3
+wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
+rm -rf ~/miniconda3/miniconda.sh
+#+end_src
+Depending on your shell run one of the following:
+#+begin_src bash
+~/miniconda3/bin/conda init bash
+~/miniconda3/bin/conda init zsh
+#+end_src
+
+
+
+
 * A project pipeline
 
 [[https://snakemake.readthedocs.io/en/stable/][SnakeMake]]
